fixed bottom gap on results page css

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ footer {
   flex: 0 150px;
   justify-content: space-between;
   align-items: center;
+  margin-top: 40px;
 }
 
 #root {
@@ -29,7 +30,7 @@ footer {
 .App section {
   height: auto;
   box-sizing: content-box;
-  min-height: 85vh;
+  min-height: 82vh;
 }
 
 .App {
@@ -82,6 +83,7 @@ footer {
     justify-content: space-between;
     max-width: 900px;
     margin: 0 auto;
+    padding-top: 100px;
 }
 
 .homeImages a img{
